Added model validations

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.text_field :name %>
 
   <label>How many stars would you give us?</label>
-  <%= f.number_field(:stars, in: 1..5, step: 1) %>
+  <%= f.number_field(:stars, in: 1..5, step: 1, value: 5) %>
 
   <label>How would you describe your stay?</label>
   <%= f.text_area :review %>
