--- a/app/views/layouts/adminpanel.html.erb
+++ b/app/views/layouts/adminpanel.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% flash.each do |type, message| %>
+      <%= content_tag(:div, message, class: "alert alert-#{type}") %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
