--- a/app/views/admin/prices/_form.html.erb
+++ b/app/views/admin/prices/_form.html.erb
@@ -8,6 +8,6 @@
   <td><%= f.number_field :min_days, placeholder: :min_days %></td>
   <td><%= f.number_field :nightly_price, placeholder: :nightly_price %></td>
   <td><%= f.number_field :extra_price, placeholder: :extra_price %></td>
-  <td><%= f.submit "Add period" %></td>
+  <td><%= f.submit "Save" %></td>
 <% end %>
 </tr>
