Added tripadvisor widget

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,6 @@
 <h1>Reviews</h1>
 
+<%= render "tripadvisor" %>
 <%= render "reviews" %>
 
 <p>Did you stay with us? We would like to hear your feedback.</p>
