partially finished partial

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,6 +1,8 @@
 <h1>BOOKINGS INDEX</h1>
 
-<% @bookings.each do |booking| %>
+<!-- <% @bookings.each do |booking| %>
   <p><%= booking.first_name %></p>
   <p><%= booking.last_name %></p>
-<% end %>
+<% end %> -->
+
+<%= render "form-booking" %>
