--- a/app/views/admin/prices/index.html.erb
+++ b/app/views/admin/prices/index.html.erb
@@ -1,4 +1,11 @@
 <h1>Seasonal Prices</h1>
+
+<% if @price.errors.any? %>
+  <% @price.errors.full_messages do |msg| %>
+    <p><%= msg %></p>
+  <% end %>
+<% end %>
+
 <table class="admin_table">
   <thead>
     <td>From</td>
