Add feature test for Photogallery

--- a/app/views/pages/photogallery.html.erb
+++ b/app/views/pages/photogallery.html.erb
@@ -1,3 +1,2 @@
-<h1>Pages#photogallery</h1>
-<p>Find me in app/views/pages/photogallery.html.erb</p>
+<h1>Photogallery</h1>
 <div id="instagram"></div>
