--- a/app/views/pages/photogallery.html.erb
+++ b/app/views/pages/photogallery.html.erb
@@ -1,2 +1,4 @@
 <h1>Photogallery</h1>
 <div id="instagram"></div>
+
+<script type="text/javascript" src="/js/photogallery.js" charset="utf-8"></script>
