Made TripAdvisor a bit nicer

--- a/app/views/reviews/_tripadvisor.html.erb
+++ b/app/views/reviews/_tripadvisor.html.erb
@@ -6,3 +6,20 @@
 </ul>
 </div>
 <script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=500&amp;locationId=10356655&amp;lang=nl&amp;rating=true&amp;nreviews=5&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
+
+<style>
+
+  /* Changing tripadvisor styling */
+  * {
+    font-family: inherit;
+  }
+  div#CDSWIDSSP {
+    width: 100% !important;
+  }
+  div.widSSPData, div.widSSPComponent {
+    border: none !important;
+  }
+  div.widSSPLegal, dt.widSSPTagline, div.widSSPSummary, div.widSSPBranding {
+    display: none !important;
+  }
+</style>
