--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,13 +1,12 @@
 <%= form_for @review do |f| %>
-
   <label>What is your name?</label>
-  <%= f.text_field :name %>
+  <%= f.text_field :name %> <br>
 
   <label>How many stars would you give us?</label>
-  <%= f.select(:stars, options_for_select([['★', 1], ['★★', 2], ['★★★', 3], ['★★★★', 4], ['★★★★★', 5]], 5)) %>
+  <%= f.select(:stars, options_for_select([['★', 1], ['★★', 2], ['★★★', 3], ['★★★★', 4], ['★★★★★', 5]], 5)) %> <br>
 
   <label>How would you describe your stay?</label>
-  <%= f.text_area :review %>
+  <%= f.text_area :review %> <br>
 
   <%= f.submit "Enter review" %>
 
