Fixed create errors

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,9 +1,15 @@
 <%= form_for @review do |f| %>
+  <ul>
+    <%= @review.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+  </ul>`
+
   <label>What is your name?</label>
   <%= f.text_field :name %> <br>
 
   <label>How many stars would you give us?</label>
-  <%= f.select(:stars, options_for_select([['★', 1], ['★★', 2], ['★★★', 3], ['★★★★', 4], ['★★★★★', 5]], 5)) %> <br>
+  <%= f.select(:stars, options_for_select([['★', "1"], ['★★', "2"], ['★★★', "3"], ['★★★★', "4"], ['★★★★★', "5"]], "5")) %> <br>
 
   <label>How would you describe your stay?</label>
   <%= f.text_area :review %> <br>
