--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @review do |f| %>
+<%= form_for @review, remote: true do |f| %>
   <% if @review.errors.any? %>
     <ul>
       <% @review.errors.full_messages.each do |msg| %>
