Add booking seeds

--- a/app/views/layouts/adminpanel.html.erb
+++ b/app/views/layouts/adminpanel.html.erb
@@ -19,7 +19,7 @@
       <div class="admin_links">
         <ul class="admin_headlinks">
           <li><%= link_to "Prices", admin_prices_path %></li>
-          <li><%= link_to "Bookings", "#" %></li>
+          <li><%= link_to "Bookings", admin_bookings_path %></li>
           <li>
             Pages
             <ul>
