--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -19,6 +19,16 @@
     text-decoration: underline;
     padding: inherit;
   }
+
+  #reviews {
+    padding: 0px;
+    margin: 0px;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0px;
+  }
 </style>
 <h1>Reviews</h1>
 
@@ -40,12 +50,23 @@
 <script>
 // Showing form partial
 $('#show-partial').click(function(){
-    $('#partial').show();
+    $('#partial').toggle();
 });
 
 // Updating reviews with ajax
 function createReview(name, stars, review) {
-  console.log("I am called!");
+  console.log("Create review is called!");
+  var allStars = ""
+
+  for (i = 0; i < stars; i++) {
+    allStars += '<img src="http://i.imgur.com/nbis287.png" alt="" height="10px" width="10px"> '
+  }
+  var reviewList = $('<ul></ul>')
+    .append($('<li>').append("<strong>Review by</strong>: " + name))
+    .append($('<li>').append("<strong>Stars: </strong>" + allStars))
+    .append($('<li>').append("<strong>Review: </strong>" + review));
+
+  $("#reviews").append(reviewList);
 
 }
 
@@ -58,5 +79,4 @@ function submitReview(event) {
 }
 
 $("form").bind('submit', submitReview);
-
 </script>
