--- a/app/views/pages/photogallery.html.erb
+++ b/app/views/pages/photogallery.html.erb
@@ -1,4 +1,5 @@
 <h1>Photogallery</h1>
 <div id="instagram"></div>
 
+<script src="/js/popup.js"></script>
 <script type="text/javascript" src="/js/photogallery.js" charset="utf-8"></script>
