--- a/app/views/admin/prices/_price.html.erb
+++ b/app/views/admin/prices/_price.html.erb
@@ -1,10 +1,10 @@
 <div class="well">
-  <div class="well-dates">
+  <div class="well-row-group">
     <span><%= price.start_date %></span>
     <span>|</span>
     <span><%= price.end_date %></span>
   </div>
-  <div class="well-prices">
+  <div class="well-column-group">
     <div class="well-row"><span>Minimum nights:</span><span><%= price.min_days %><span></div>
     <div class="well-row"><span>Nightly Price:</span><span><%= price.nightly_price %></span></div>
     <div class="well-row"><span>Price per extra:</span><span><%= price.extra_price %></span></div>
