Add number of days

--- a/app/views/admin/bookings/_booking.html.erb
+++ b/app/views/admin/bookings/_booking.html.erb
@@ -16,12 +16,16 @@
     <span>|</span>
     <span><%= booking.check_out %></span>
   </div>
+  <div class="well-row-group">
+    <span><%= booking.total_price %></span>
+  </div>
   <div class="well-column-group">
     <div class="well-row"><span><%= booking.full_name %></span></div>
     <div class="well-row"><span><%= booking.full_address_html.html_safe %></span></div>
   </div>
   <div class="well-column-group">
     <div class="well-row"><span>Number of people:</span><span><%= booking.people %></span></div>
+    <div class="well-row"><span>Number of days:</span><span><%= booking.number_of_days %></span></div>
     <div class="well-row"><span>Confirmed:</span><span><%= booking.confirmed? ? "yes" : "no" %></span></div>
     <div class="well-row"><span>Paid:</span><span><%= booking.paid? ? "yes" : "no" %></span></div>
 
