SHIT LOT OF CSS - HOME PAGE

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700%7CRoboto+Slab:400,700');
 @import "normalize/import-now";
+@import "base/_module";
 @import "features/module";
+@import "partials/module";
 @import "pages/module";
