--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -2,3 +2,8 @@ $base-color: rgb(111, 133, 97);
 $light-base-color: lighten( $base-color, 10% );
 $warning-color: rgb(168, 105, 105);
 $base-dark: rgb(51, 51, 51);
+$font-body: 'Lato', sans-serif;
+$font-title: 'Roboto Slab', serif;
+$content-width: 1000px;
+$font-normal-weight: 400;
+$font-bold-weight: 700;
