--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,15 +1,17 @@
-
-
-<div class="carousel">
-    <% @carousel.photos.each do |photo| %>
-    <%= image_tag(photo.image_url(:standard)) %>
-    <% end %>
+<div class="carousel-container">
+  <div class="carousel">
+      <% @carousel.photos.each do |photo| %>
+      <%= image_tag(photo.image_url(:standard)) %>
+      <% end %>
+  </div>
 </div>
 
-<div>
-    <% @paragraphs.each do |p| %>
-    <div class="">
-        <p><%= p.text%></p>
+    <div class="content">
+    <div>
+        <% @paragraphs.each do |p| %>
+        <div class="">
+            <p><%= p.text%></p>
+        </div>
+        <% end %>
     </div>
-    <% end %>
 </div>
