Make booking modal

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,10 @@
 <h1>Hello suckers!</h1>
 
+<%= render 'modal' %>
 
-<div class="carousel">
+
+<!-- <div class="carousel">
   <% @carousel.photos.each do |photo| %>
     <%= image_tag(photo.image_url(:standard)) %>
   <% end %>
-</div>
+</div> -->
