Add animation to book modal

--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -19,3 +19,11 @@
     <button class="submit" type="submit">BOOK NOW</button>
   </form>
 </div>
+
+<script>
+
+  $('.bookingtrigger').click(function(){
+    $('.bookingmodal').toggleClass('clicked');
+  });
+
+</script>
