--- a/app/assets/stylesheets/pages/pages.scss
+++ b/app/assets/stylesheets/pages/pages.scss
@@ -28,12 +28,31 @@ body {
   }
 }
 
+.bookingmodal.clicked {
+  display: flex !important;
+  animation: open 200ms ease-in-out forwards;
+  transform-origin: center top;
+
+  @keyframes open {
+    0% {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+}
+
 .bookingmodal {
   position: absolute;
   top: 150px;
-  display: flex;
+  display: none;
   background: url('modalbg.svg');
-  height: 278px;
+  height: 300px;
   width: 300px;
   font-family: Lato, sans-serif;
   // box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5);
@@ -44,7 +63,7 @@ body {
     justify-content: center;
     align-content: flex-start;
     max-width: 300px;
-    margin-top: 35px;
+    margin-top: 45px;
 
     :focus {
       outline: 1px solid #6F8561;
