More CSS for Homepage

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,17 +1,20 @@
 <div class="carousel-container">
-  <div class="carousel">
-      <% @carousel.photos.each do |photo| %>
-      <%= image_tag(photo.image_url(:standard)) %>
-      <% end %>
-  </div>
+    <div class="carousel">
+        <% @carousel.photos.each do |photo| %>
+        <%= image_tag(photo.image_url(:standard)) %>
+        <% end %>
+    </div>
 </div>
 
-    <div class="content">
-    <div>
-        <% @paragraphs.each do |p| %>
-        <div class="">
-            <p><%= p.text%></p>
+<div class="content">
+    <div class="home-text-container">
+        <div class="home-text-wrapper home-text-hidden" id="home-text-wrapper">
+            <% @paragraphs.each do |p| %>
+            <div>
+                <p><%= p.text%></p>
+            </div>
+            <% end %>
         </div>
-        <% end %>
+        <a href="#" id="readmore" class="readmore">read more ></a>
     </div>
 </div>
