--- a/app/assets/stylesheets/base/page.scss
+++ b/app/assets/stylesheets/base/page.scss
@@ -8,10 +8,23 @@ body {
   color: $base-dark;
   width: 100%;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  .page-body {
+    flex: 1;
+  }
 }
 
 .content {
   max-width: $content-width;
   padding: 10px;
   margin: 0 auto;
+}
+
+footer {
+  width: 100%;
+  padding: 40px 0;
+  text-align: center;
+  background-color: $base-dark;
+  color: white;
 }
