--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <body>
         <%= render "layouts/navbar" %>
-        <%= yield %>
+        <div class="page-body"><%= yield %></div>
         <%= render "layouts/footer" %>
     </body>
 </html>
