Validations and error messages on form with ajax

--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -7,13 +7,13 @@
     </ul>
   <% end %>
 
-  <label>What is your name?</label>
+  <label id="name_label">What is your name?</label>
   <%= f.text_field :name %> <br>
 
-  <label>How many stars would you give us?</label>
+  <label id="star_label">How many stars would you give us?</label>
   <%= f.select(:stars, options_for_select([['★', "1"], ['★★', "2"], ['★★★', "3"], ['★★★★', "4"], ['★★★★★', "5"]], "5")) %> <br>
 
-  <label>How would you describe your stay?</label>
+  <label id="review_label">How would you describe your stay?</label>
   <%= f.text_area :review %> <br>
 
   <%= f.submit "Enter review" %>
