--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,11 @@
 <header class="navbar">
     <div class="content">
-        <h1><span>Cas'al </span><span>Verde</span></h1>
+        <%= link_to(root_path) do %>
+        <h1>
+            <span>Cas'al</span>
+            <span>Verde</span>
+        </h1>
+        <% end %>
         <nav>
             <a href="#">Book Now</a>
             <a href="#">Gallery</a>
