--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -60,19 +60,6 @@ $('#show-partial').click(function(){
 
 // Updating reviews with ajax
 function createReview(name, stars, review) {
-  console.log("Create review is called!");
-  var allStars = ""
-
-  for (i = 0; i < stars; i++) {
-    allStars += '<img src="http://i.imgur.com/nbis287.png" alt="" height="10px" width="10px"> '
-  }
-  var reviewList = $('<ul></ul>')
-    .append($('<li>').append("<strong>Review by</strong>: " + name))
-    .append($('<li>').append("<strong>Stars: </strong>" + allStars))
-    .append($('<li>').append("<strong>Review: </strong>" + review));
-
-  $("#reviews").append(reviewList).append("<hr>");
-
   var newReview = {name: name, stars: stars, review: review};
     $.ajax({
       type: "POST",
@@ -82,6 +69,20 @@ function createReview(name, stars, review) {
       }),
       contentType: "application/json",
       dataType: "json"})
+    .done(function(data) {
+      var allStars = ""
+
+      for (i = 0; i < stars; i++) {
+        allStars += '<img src="http://i.imgur.com/nbis287.png" alt="" height="10px" width="10px"> '
+      }
+      var reviewList = $('<ul></ul>')
+        .append($('<li>').append("<strong>Review by</strong>: " + name))
+        .append($('<li>').append("<strong>Stars: </strong>" + allStars))
+        .append($('<li>').append("<strong>Review: </strong>" + review));
+
+      $("#reviews").append(reviewList).append("<hr>");
+    })
+
 
     .fail(function(error) {
       console.log(error);
