--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -2,39 +2,58 @@
   box-sizing: border-box;
 }
 
-body.admin {
-  display: flex;
-}
+body.admin_panel {
+  font-family: $font-body;
+  height: 100vh;
+  width: 100%;
 
-.admin_sidebar {
-  flex-shrink: 0;
-  flex-grow: 0;
-  flex-basis: 200px;
-  background-color: #ccc;
-  padding: 10px 30px;
-  min-height: 100vh;
-  h1 {
-    font-size: 20px;
+  a {
+    color: $base-dark;
+    text-decoration: none;
+    &:visited {
+      color: $base-dark;
+    }
+    &:hover {
+      color: $base-color;
+    }
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-family: $font-title;
+    font-weight: $font-bold-weight;
   }
 }
+
+.admin_navigation {
+  margin-right: 10px;
+  padding: 20px 20px;
+  position: fixed;
+  width: 200px;
+  border-right: 1px solid $base-color;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
+.admin_menu {
+
+}
+.admin_links {
+  padding: 0;
+}
+.admin_link {
+  list-style-type: none;
+}
 .admin_main {
+  margin-left: 200px;
+  padding: 5px 10px;
+}
+.bookings {
   display: flex;
-  flex-direction: column;
+  .well {
+    margin-right: 10px;
+    width: 300px;
+  }
 }
 
-.admin_flash {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  padding: 20px;
-  height: 80px;
-  background: #ddd;
-}
-
-.admin_content {
-  margin: 20px;
-  width: calc(100%-200px);
-}
 div.form-wrapper {
   h3 {
     margin: 0;
@@ -46,6 +65,7 @@ div.form-group {
   padding: 5px 0;
   display: flex;
   justify-content: space-between;
+  max-width: 300px;
   align-items: center;
   label {
     font-weight: bold;
@@ -56,7 +76,7 @@ div.form-group {
 div.well {
   max-width: 300px;
   padding: 10px;
-  margin: 20px 0;
+  margin-bottom: 10px;
   border: 1px solid black;
   border-radius: 4px;
   display: flex;
@@ -66,16 +86,14 @@ div.well-row-group {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 20px;
   font-weight: bold;
   span {
-    margin: 0 5px;
+    margin: 5px;
   }
 }
 div.well-column-group {
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
   div.well-row {
     padding: 5px 0;
     display: flex;
@@ -86,8 +104,11 @@ div.well-column-group {
 div.well-actions {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   span {
     margin-right: 10px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
