--- a/app/views/admin/bookings/_booking.html.erb
+++ b/app/views/admin/bookings/_booking.html.erb
@@ -1,23 +1,12 @@
-<!-- <p><%= booking.full_name %></p>
-<p>Check in: <%= booking.check_in %></p>
-<p>Check out: <%= booking.check_out %></p>
-<p>phone number: <%= booking.phone %></p>
-<p>email: <%= booking.email %></p>
-<p>address: <%= booking.full_address_html.html_safe %></p>
-<p>Number of people: <%= booking.people %></p>
-<p>Total price: <%= booking.total_price %></p>
-
-<p>Confirmed: <%= booking.confirmed? ? "yes" : "no" %></p>
-<p>Paid: <%= booking.paid? ? "yes" : "no" %></p> -->
-
 <div class="well">
   <div class="well-row-group">
     <span><%= booking.check_in %></span>
-    <span>|</span>
+    <span>-</span>
     <span><%= booking.check_out %></span>
   </div>
   <div class="well-row-group">
-    <span><%= booking.total_price %></span>
+    <span></span>
+    <span>&euro; <%= booking.total_price %></span>
   </div>
   <div class="well-column-group">
     <div class="well-row"><span><%= booking.full_name %></span></div>
@@ -28,6 +17,12 @@
     <div class="well-row"><span>Number of days:</span><span><%= booking.number_of_days %></span></div>
     <div class="well-row"><span>Confirmed:</span><span><%= booking.confirmed? ? "yes" : "no" %></span></div>
     <div class="well-row"><span>Paid:</span><span><%= booking.paid? ? "yes" : "no" %></span></div>
-
+  </div>
+  <div class="well-column-group">
+    <div class="well-actions">
+      <span><%= link_to (booking.confirmed? ? "Un-confirm" : "Confirm"), '#' %></span>
+      <span><%= link_to "Delete", '#' %></span>
+      <span><%= link_to (booking.paid? ? "Not paid" : "Paid"), '#' %></span>
+    </div>
   </div>
 </div>
