--- a/app/views/admin/bookings/index.html.erb
+++ b/app/views/admin/bookings/index.html.erb
@@ -1,20 +1,28 @@
-<h2>Current booking</h2>
-<% if @bookings_current.empty? %>
-  <p>Currently no-one is in the house.</p>
-<% else %>
-  <%= render @bookings_current %>
-<% end %>
+
+<h2>Last and current guests</h2>
+<div class="bookings">
+  <%= render @bookings_last %>
+  <% if @bookings_current.empty? %>
+    <p>Currently no-one is in the house.</p>
+  <% else %>
+    <%= render @bookings_current %>
+  <% end %>
+</div>
 
 <h2>Upcoming Confirmed bookings</h2>
-<% if @bookings_confirmed.empty? %>
-  <p>No confirmed guests yet.</p>
-<% else %>
-  <%= render @bookings_confirmed %>
-<% end %>
+<div class="bookings">
+  <% if @bookings_confirmed.empty? %>
+    <p>No confirmed guests yet.</p>
+  <% else %>
+    <%= render @bookings_confirmed %>
+  <% end %>
+</div>
 
 <h2>Upcoming Reserved bookings</h2>
-<% if @bookings_reserved.empty? %>
-  <p>There are no reserved bookings.</p>
-<% else %>
-  <%= render @bookings_reserved %>
-<% end %>
+<div class="bookings">
+  <% if @bookings_reserved.empty? %>
+    <p>There are no reserved bookings.</p>
+  <% else %>
+    <%= render @bookings_reserved %>
+  <% end %>
+</div>
