New CSS, added modal

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -7,3 +7,4 @@ $font-title: 'Roboto Slab', serif;
 $content-width: 1000px;
 $font-normal-weight: 400;
 $font-bold-weight: 700;
+$button-width: 150px;
