--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
         </h1>
         <% end %>
         <nav>
-            <a href="#">Book Now</a>
+            <%= render 'modal' %>
             <a href="#">Gallery</a>
             <a href="#">Reviews</a>
 
