--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -101,6 +101,10 @@ div.well-column-group {
     justify-content: space-between;
   }
 }
+div.review-show {
+  padding-top: 1px;
+  padding-bottom: 5px;
+}
 div.well-actions {
   display: flex;
   flex-direction: row;
