Changed some admin styles and added images for stars

--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -104,6 +104,7 @@ div.well-column-group {
 div.review-show {
   padding-top: 1px;
   padding-bottom: 5px;
+  text-align: center;
 }
 div.well-actions {
   display: flex;
