--- a/app/views/pages/_modal.html.erb
+++ b/app/views/pages/_modal.html.erb
@@ -1,5 +1,7 @@
-<div class="bookingtrigger">
-    <span>BOOK NOW</span>
+<div class="booking-container">
+    <div class="bookingtrigger" id="bookingtrigger">
+        <a href="#">BOOK NOW</a>
+    </div>
     <div class="bookingmodal">
         <form action="/my-handling-form-page" method="post">
             <div class="bookinginput">
