Adding styles to tripadvisor

--- a/app/views/reviews/_tripadvisor.html.erb
+++ b/app/views/reviews/_tripadvisor.html.erb
@@ -19,7 +19,12 @@
   div.widSSPData, div.widSSPComponent {
     border: none !important;
   }
-  div.widSSPLegal, dt.widSSPTagline, div.widSSPSummary, div.widSSPBranding {
+  div.widSSPLegal, dt.widSSPTagline, div.widSSPSummary {
     display: none !important;
+  }
+  div.widSSPData {
+    border: 1px solid grey !important;
+    margin-top: 30px;
+    margin-bottom: 30px;
   }
 </style>
